; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarCyCmpR8.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarCyCmpR8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXPECT_EQ = common dso_local global i32 0, align 4
@EXPECT_LT = common dso_local global i32 0, align 4
@EXPECT_GT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarCyCmpR8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarCyCmpR8() #0 {
  %1 = alloca i32, align 4
  %2 = alloca double, align 8
  %3 = alloca i32, align 4
  %4 = alloca double, align 8
  store double 0.000000e+00, double* %2, align 8
  %5 = call i32 @MATHCMPR8(double -1.000000e+00, double -1.000000e+00)
  %6 = load i32, i32* @EXPECT_EQ, align 4
  %7 = call i32 @MATHCMPR8(double -1.000000e+00, double 0.000000e+00)
  %8 = load i32, i32* @EXPECT_LT, align 4
  %9 = call i32 @MATHCMPR8(double -1.000000e+00, double 1.000000e+00)
  %10 = load i32, i32* @EXPECT_LT, align 4
  %11 = call i32 @MATHCMPR8(double -1.000000e+00, double 2.000000e+00)
  %12 = load i32, i32* @EXPECT_LT, align 4
  %13 = call i32 @MATHCMPR8(double 0.000000e+00, double 1.000000e+00)
  %14 = load i32, i32* @EXPECT_LT, align 4
  %15 = call i32 @MATHCMPR8(double 0.000000e+00, double 0.000000e+00)
  %16 = load i32, i32* @EXPECT_EQ, align 4
  %17 = call i32 @MATHCMPR8(double 0.000000e+00, double -1.000000e+00)
  %18 = load i32, i32* @EXPECT_GT, align 4
  %19 = call i32 @MATHCMPR8(double 1.000000e+00, double -1.000000e+00)
  %20 = load i32, i32* @EXPECT_GT, align 4
  %21 = call i32 @MATHCMPR8(double 1.000000e+00, double 0.000000e+00)
  %22 = load i32, i32* @EXPECT_GT, align 4
  %23 = call i32 @MATHCMPR8(double 1.000000e+00, double 1.000000e+00)
  %24 = load i32, i32* @EXPECT_EQ, align 4
  %25 = call i32 @MATHCMPR8(double 1.000000e+00, double 2.000000e+00)
  %26 = load i32, i32* @EXPECT_LT, align 4
  ret void
}

declare dso_local i32 @MATHCMPR8(double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
